--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,9 +30,9 @@ endpoints.default.web.enabled=true
 mybatis.type-aliases-package=xmu.yunzhieducation.entity
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://123.207.117.220:3306/test1?characterEncoding=utf8&useSSL=false 
-spring.datasource.username = try
-spring.datasource.password = fjl123
+spring.datasource.url = jdbc:mysql://123.207.117.220:3306/yzcb?characterEncoding=utf8&useSSL=false 
+spring.datasource.username = chenb
+spring.datasource.password = chenb
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
