--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>CourseManageSystem</name>
+    <name>YunZhiSystem</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
